--- a/Project Master.ipynb
+++ b/Project Master.ipynb
@@ -12,20 +12,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "#read all Csv files from each Location\n",
-    "sanfran_data = (pd.read_csv('data/SanFrancisco.csv')).drop(columns=['Unnamed: 0', 'Business ID'])\n",
-    "newyork_data = (pd.read_csv('data/NewYork.csv')).drop(columns=['Unnamed: 0', 'Business ID'])\n",
-    "austin_data = (pd.read_csv('data/AustinTX.csv')).drop(columns=['Unnamed: 0', 'Business ID'])\n",
-    "chicago_data = (pd.read_csv('data/Chicago.csv')).drop(columns=['Unnamed: 0', 'Business ID'])"
+    "west_data = (pd.read_csv('data/SanFrancisco.csv')).drop(columns=['Unnamed: 0', 'Business ID'])\n",
+    "east_data = (pd.read_csv('data/NewYork.csv')).drop(columns=['Unnamed: 0', 'Business ID'])\n",
+    "south_data = (pd.read_csv('data/AustinTX.csv')).drop(columns=['Unnamed: 0', 'Business ID'])\n",
+    "north_data = (pd.read_csv('data/Chicago.csv')).drop(columns=['Unnamed: 0', 'Business ID'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -115,116 +115,405 @@
        "      <td>$$</td>\n",
        "      <td>1497</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>945</td>\n",
-       "      <td>Redford</td>\n",
-       "      <td>San Francisco</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>American (Traditional)</td>\n",
-       "      <td>37.786450</td>\n",
-       "      <td>-122.414320</td>\n",
-       "      <td>$$</td>\n",
-       "      <td>442</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>946</td>\n",
-       "      <td>Pampanguena Cuisine</td>\n",
-       "      <td>San Francisco</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>Filipino</td>\n",
-       "      <td>37.727058</td>\n",
-       "      <td>-122.432754</td>\n",
-       "      <td>$$</td>\n",
-       "      <td>316</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>947</td>\n",
-       "      <td>Wok Shop Cafe</td>\n",
-       "      <td>San Francisco</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>Chinese</td>\n",
-       "      <td>37.787384</td>\n",
-       "      <td>-122.422165</td>\n",
-       "      <td>$</td>\n",
-       "      <td>586</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>948</td>\n",
-       "      <td>Crawstation</td>\n",
-       "      <td>San Francisco</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>Seafood</td>\n",
-       "      <td>37.763360</td>\n",
-       "      <td>-122.465930</td>\n",
-       "      <td>$$</td>\n",
-       "      <td>946</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>949</td>\n",
-       "      <td>Okina Sushi</td>\n",
-       "      <td>San Francisco</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>Sushi Bars</td>\n",
-       "      <td>37.775740</td>\n",
-       "      <td>-122.458120</td>\n",
-       "      <td>$$</td>\n",
-       "      <td>391</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>950 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                             Business           City State  \\\n",
-       "0                   Swan Oyster Depot  San Francisco    CA   \n",
-       "1        Marco Polo Italian Ice Cream  San Francisco    CA   \n",
-       "2                   Anchor Oyster Bar  San Francisco    CA   \n",
-       "3                     Chez Maman East  San Francisco    CA   \n",
-       "4    Shizen Vegan Sushi Bar & Izakaya  San Francisco    CA   \n",
-       "..                                ...            ...   ...   \n",
-       "945                           Redford  San Francisco    CA   \n",
-       "946               Pampanguena Cuisine  San Francisco    CA   \n",
-       "947                     Wok Shop Cafe  San Francisco    CA   \n",
-       "948                       Crawstation  San Francisco    CA   \n",
-       "949                       Okina Sushi  San Francisco    CA   \n",
+       "                           Business           City State  \\\n",
+       "0                 Swan Oyster Depot  San Francisco    CA   \n",
+       "1      Marco Polo Italian Ice Cream  San Francisco    CA   \n",
+       "2                 Anchor Oyster Bar  San Francisco    CA   \n",
+       "3                   Chez Maman East  San Francisco    CA   \n",
+       "4  Shizen Vegan Sushi Bar & Izakaya  San Francisco    CA   \n",
        "\n",
-       "                      Category   Latitude   Longitude Price  Reviews  \n",
-       "0                      Seafood  37.790939 -122.420796    $$     2709  \n",
-       "1    Ice Cream & Frozen Yogurt  37.742622 -122.481885     $     1429  \n",
-       "2                      Seafood  37.759689 -122.434609   $$$     1470  \n",
-       "3                       French  37.762439 -122.396692    $$     2043  \n",
-       "4                   Sushi Bars  37.768314 -122.421642    $$     1497  \n",
-       "..                         ...        ...         ...   ...      ...  \n",
-       "945     American (Traditional)  37.786450 -122.414320    $$      442  \n",
-       "946                   Filipino  37.727058 -122.432754    $$      316  \n",
-       "947                    Chinese  37.787384 -122.422165     $      586  \n",
-       "948                    Seafood  37.763360 -122.465930    $$      946  \n",
-       "949                 Sushi Bars  37.775740 -122.458120    $$      391  \n",
-       "\n",
-       "[950 rows x 8 columns]"
+       "                    Category   Latitude   Longitude Price  Reviews  \n",
+       "0                    Seafood  37.790939 -122.420796    $$     2709  \n",
+       "1  Ice Cream & Frozen Yogurt  37.742622 -122.481885     $     1429  \n",
+       "2                    Seafood  37.759689 -122.434609   $$$     1470  \n",
+       "3                     French  37.762439 -122.396692    $$     2043  \n",
+       "4                 Sushi Bars  37.768314 -122.421642    $$     1497  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# newyork_data.drop(columns=['Unnamed: 0', 'Business ID'])\n",
-    "sanfran_data"
+    "west_data.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Business</th>\n",
+       "      <th>City</th>\n",
+       "      <th>State</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Reviews</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>Morimoto</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>Japanese</td>\n",
+       "      <td>40.743320</td>\n",
+       "      <td>-74.007130</td>\n",
+       "      <td>$$$$</td>\n",
+       "      <td>2989</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>Up Thai</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>Thai</td>\n",
+       "      <td>40.769828</td>\n",
+       "      <td>-73.957633</td>\n",
+       "      <td>$$</td>\n",
+       "      <td>2119</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>Per Se</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>French</td>\n",
+       "      <td>40.768153</td>\n",
+       "      <td>-73.982763</td>\n",
+       "      <td>$$$$</td>\n",
+       "      <td>1600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>Cafe Habana</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>Cuban</td>\n",
+       "      <td>40.722998</td>\n",
+       "      <td>-73.994171</td>\n",
+       "      <td>$$</td>\n",
+       "      <td>3121</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>Junior's Restaurant &amp; Bakery - 45th St.</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>Bakeries</td>\n",
+       "      <td>40.758266</td>\n",
+       "      <td>-73.986540</td>\n",
+       "      <td>$$</td>\n",
+       "      <td>4364</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                  Business      City State  Category  \\\n",
+       "0                                 Morimoto  New York    NY  Japanese   \n",
+       "1                                  Up Thai  New York    NY      Thai   \n",
+       "2                                   Per Se  New York    NY    French   \n",
+       "3                              Cafe Habana  New York    NY     Cuban   \n",
+       "4  Junior's Restaurant & Bakery - 45th St.  New York    NY  Bakeries   \n",
+       "\n",
+       "    Latitude  Longitude Price  Reviews  \n",
+       "0  40.743320 -74.007130  $$$$     2989  \n",
+       "1  40.769828 -73.957633    $$     2119  \n",
+       "2  40.768153 -73.982763  $$$$     1600  \n",
+       "3  40.722998 -73.994171    $$     3121  \n",
+       "4  40.758266 -73.986540    $$     4364  "
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "east_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Business</th>\n",
+       "      <th>City</th>\n",
+       "      <th>State</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Reviews</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>Volare Ristorante Italiano</td>\n",
+       "      <td>Chicago</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>Italian</td>\n",
+       "      <td>41.891590</td>\n",
+       "      <td>-87.622519</td>\n",
+       "      <td>$$</td>\n",
+       "      <td>2001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>Over Easy Cafe</td>\n",
+       "      <td>Chicago</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>Breakfast &amp; Brunch</td>\n",
+       "      <td>41.971721</td>\n",
+       "      <td>-87.679083</td>\n",
+       "      <td>$$</td>\n",
+       "      <td>1424</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>Siena Tavern</td>\n",
+       "      <td>Chicago</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>Italian</td>\n",
+       "      <td>41.889075</td>\n",
+       "      <td>-87.629970</td>\n",
+       "      <td>$$$</td>\n",
+       "      <td>1717</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>The Cloud Gate</td>\n",
+       "      <td>Chicago</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>Landmarks &amp; Historical Buildings</td>\n",
+       "      <td>41.882552</td>\n",
+       "      <td>-87.622551</td>\n",
+       "      <td>0</td>\n",
+       "      <td>735</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>Lincoln Park Zoo</td>\n",
+       "      <td>Chicago</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>Zoos</td>\n",
+       "      <td>41.920915</td>\n",
+       "      <td>-87.633605</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1238</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     Business     City State  \\\n",
+       "0  Volare Ristorante Italiano  Chicago    IL   \n",
+       "1              Over Easy Cafe  Chicago    IL   \n",
+       "2                Siena Tavern  Chicago    IL   \n",
+       "3              The Cloud Gate  Chicago    IL   \n",
+       "4            Lincoln Park Zoo  Chicago    IL   \n",
+       "\n",
+       "                           Category   Latitude  Longitude Price  Reviews  \n",
+       "0                           Italian  41.891590 -87.622519    $$     2001  \n",
+       "1                Breakfast & Brunch  41.971721 -87.679083    $$     1424  \n",
+       "2                           Italian  41.889075 -87.629970   $$$     1717  \n",
+       "3  Landmarks & Historical Buildings  41.882552 -87.622551     0      735  \n",
+       "4                              Zoos  41.920915 -87.633605     0     1238  "
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "north_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Business</th>\n",
+       "      <th>City</th>\n",
+       "      <th>State</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Reviews</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>Morimoto</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>Japanese</td>\n",
+       "      <td>40.743320</td>\n",
+       "      <td>-74.007130</td>\n",
+       "      <td>$$$$</td>\n",
+       "      <td>2989</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>Up Thai</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>Thai</td>\n",
+       "      <td>40.769828</td>\n",
+       "      <td>-73.957633</td>\n",
+       "      <td>$$</td>\n",
+       "      <td>2119</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>Per Se</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>French</td>\n",
+       "      <td>40.768153</td>\n",
+       "      <td>-73.982763</td>\n",
+       "      <td>$$$$</td>\n",
+       "      <td>1600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>Cafe Habana</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>Cuban</td>\n",
+       "      <td>40.722998</td>\n",
+       "      <td>-73.994171</td>\n",
+       "      <td>$$</td>\n",
+       "      <td>3121</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>Junior's Restaurant &amp; Bakery - 45th St.</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>Bakeries</td>\n",
+       "      <td>40.758266</td>\n",
+       "      <td>-73.986540</td>\n",
+       "      <td>$$</td>\n",
+       "      <td>4364</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                  Business      City State  Category  \\\n",
+       "0                                 Morimoto  New York    NY  Japanese   \n",
+       "1                                  Up Thai  New York    NY      Thai   \n",
+       "2                                   Per Se  New York    NY    French   \n",
+       "3                              Cafe Habana  New York    NY     Cuban   \n",
+       "4  Junior's Restaurant & Bakery - 45th St.  New York    NY  Bakeries   \n",
+       "\n",
+       "    Latitude  Longitude Price  Reviews  \n",
+       "0  40.743320 -74.007130  $$$$     2989  \n",
+       "1  40.769828 -73.957633    $$     2119  \n",
+       "2  40.768153 -73.982763  $$$$     1600  \n",
+       "3  40.722998 -73.994171    $$     3121  \n",
+       "4  40.758266 -73.986540    $$     4364  "
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "east_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
