Update to CSV Files

--- a/Project Master.ipynb
+++ b/Project Master.ipynb
@@ -510,10 +510,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#breakdown by categories, counts in each category\n",
+    "east_category = east_data.loc[:,[\"Category\"]]\n",
+    "# north_data_category.count()\n",
+    "east_category = east_category[\"Category\"].value_counts()\n",
+    "#total reviews breakdown by category\n",
+    "#average value of review for category\n",
+    "#"
+   ]
   },
   {
    "cell_type": "code",
