Final Search Query

--- a/Project Master.ipynb
+++ b/Project Master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -57,6 +57,7 @@
        "      <th>Longitude</th>\n",
        "      <th>Price</th>\n",
        "      <th>Reviews</th>\n",
+       "      <th>Rating</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -70,6 +71,7 @@
        "      <td>-122.420796</td>\n",
        "      <td>$$</td>\n",
        "      <td>2709</td>\n",
+       "      <td>4.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
@@ -80,7 +82,8 @@
        "      <td>37.742622</td>\n",
        "      <td>-122.481885</td>\n",
        "      <td>$</td>\n",
-       "      <td>1429</td>\n",
+       "      <td>1430</td>\n",
+       "      <td>4.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
@@ -92,6 +95,7 @@
        "      <td>-122.434609</td>\n",
        "      <td>$$$</td>\n",
        "      <td>1470</td>\n",
+       "      <td>4.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
@@ -103,6 +107,7 @@
        "      <td>-122.396692</td>\n",
        "      <td>$$</td>\n",
        "      <td>2043</td>\n",
+       "      <td>4.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
@@ -114,6 +119,7 @@
        "      <td>-122.421642</td>\n",
        "      <td>$$</td>\n",
        "      <td>1497</td>\n",
+       "      <td>4.5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -127,15 +133,15 @@
        "3                   Chez Maman East  San Francisco    CA   \n",
        "4  Shizen Vegan Sushi Bar & Izakaya  San Francisco    CA   \n",
        "\n",
-       "                    Category   Latitude   Longitude Price  Reviews  \n",
-       "0                    Seafood  37.790939 -122.420796    $$     2709  \n",
-       "1  Ice Cream & Frozen Yogurt  37.742622 -122.481885     $     1429  \n",
-       "2                    Seafood  37.759689 -122.434609   $$$     1470  \n",
-       "3                     French  37.762439 -122.396692    $$     2043  \n",
-       "4                 Sushi Bars  37.768314 -122.421642    $$     1497  "
+       "                    Category   Latitude   Longitude Price  Reviews  Rating  \n",
+       "0                    Seafood  37.790939 -122.420796    $$     2709     4.0  \n",
+       "1  Ice Cream & Frozen Yogurt  37.742622 -122.481885     $     1430     4.5  \n",
+       "2                    Seafood  37.759689 -122.434609   $$$     1470     4.5  \n",
+       "3                     French  37.762439 -122.396692    $$     2043     4.5  \n",
+       "4                 Sushi Bars  37.768314 -122.421642    $$     1497     4.5  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -179,6 +185,7 @@
        "      <th>Longitude</th>\n",
        "      <th>Price</th>\n",
        "      <th>Reviews</th>\n",
+       "      <th>Rating</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -192,6 +199,7 @@
        "      <td>-74.007130</td>\n",
        "      <td>$$$$</td>\n",
        "      <td>2989</td>\n",
+       "      <td>4.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
@@ -202,7 +210,8 @@
        "      <td>40.769828</td>\n",
        "      <td>-73.957633</td>\n",
        "      <td>$$</td>\n",
-       "      <td>2119</td>\n",
+       "      <td>2120</td>\n",
+       "      <td>4.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
@@ -214,6 +223,7 @@
        "      <td>-73.982763</td>\n",
        "      <td>$$$$</td>\n",
        "      <td>1600</td>\n",
+       "      <td>4.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
@@ -225,6 +235,7 @@
        "      <td>-73.994171</td>\n",
        "      <td>$$</td>\n",
        "      <td>3121</td>\n",
+       "      <td>4.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
@@ -236,6 +247,7 @@
        "      <td>-73.986540</td>\n",
        "      <td>$$</td>\n",
        "      <td>4364</td>\n",
+       "      <td>4.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -249,15 +261,15 @@
        "3                              Cafe Habana  New York    NY     Cuban   \n",
        "4  Junior's Restaurant & Bakery - 45th St.  New York    NY  Bakeries   \n",
        "\n",
-       "    Latitude  Longitude Price  Reviews  \n",
-       "0  40.743320 -74.007130  $$$$     2989  \n",
-       "1  40.769828 -73.957633    $$     2119  \n",
-       "2  40.768153 -73.982763  $$$$     1600  \n",
-       "3  40.722998 -73.994171    $$     3121  \n",
-       "4  40.758266 -73.986540    $$     4364  "
+       "    Latitude  Longitude Price  Reviews  Rating  \n",
+       "0  40.743320 -74.007130  $$$$     2989     4.0  \n",
+       "1  40.769828 -73.957633    $$     2120     4.5  \n",
+       "2  40.768153 -73.982763  $$$$     1600     4.5  \n",
+       "3  40.722998 -73.994171    $$     3121     4.0  \n",
+       "4  40.758266 -73.986540    $$     4364     4.0  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -300,6 +312,7 @@
        "      <th>Longitude</th>\n",
        "      <th>Price</th>\n",
        "      <th>Reviews</th>\n",
+       "      <th>Rating</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -313,6 +326,7 @@
        "      <td>-87.622519</td>\n",
        "      <td>$$</td>\n",
        "      <td>2001</td>\n",
+       "      <td>4.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
@@ -324,6 +338,7 @@
        "      <td>-87.679083</td>\n",
        "      <td>$$</td>\n",
        "      <td>1424</td>\n",
+       "      <td>4.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
@@ -335,6 +350,7 @@
        "      <td>-87.629970</td>\n",
        "      <td>$$$</td>\n",
        "      <td>1717</td>\n",
+       "      <td>4.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
@@ -346,6 +362,7 @@
        "      <td>-87.622551</td>\n",
        "      <td>0</td>\n",
        "      <td>735</td>\n",
+       "      <td>4.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
@@ -357,6 +374,7 @@
        "      <td>-87.633605</td>\n",
        "      <td>0</td>\n",
        "      <td>1238</td>\n",
+       "      <td>4.5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -370,15 +388,22 @@
        "3              The Cloud Gate  Chicago    IL   \n",
        "4            Lincoln Park Zoo  Chicago    IL   \n",
        "\n",
-       "                           Category   Latitude  Longitude Price  Reviews  \n",
-       "0                           Italian  41.891590 -87.622519    $$     2001  \n",
-       "1                Breakfast & Brunch  41.971721 -87.679083    $$     1424  \n",
-       "2                           Italian  41.889075 -87.629970   $$$     1717  \n",
-       "3  Landmarks & Historical Buildings  41.882552 -87.622551     0      735  \n",
-       "4                              Zoos  41.920915 -87.633605     0     1238  "
+       "                           Category   Latitude  Longitude Price  Reviews  \\\n",
+       "0                           Italian  41.891590 -87.622519    $$     2001   \n",
+       "1                Breakfast & Brunch  41.971721 -87.679083    $$     1424   \n",
+       "2                           Italian  41.889075 -87.629970   $$$     1717   \n",
+       "3  Landmarks & Historical Buildings  41.882552 -87.622551     0      735   \n",
+       "4                              Zoos  41.920915 -87.633605     0     1238   \n",
+       "\n",
+       "   Rating  \n",
+       "0     4.0  \n",
+       "1     4.5  \n",
+       "2     4.0  \n",
+       "3     4.5  \n",
+       "4     4.5  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -421,6 +446,7 @@
        "      <th>Longitude</th>\n",
        "      <th>Price</th>\n",
        "      <th>Reviews</th>\n",
+       "      <th>Rating</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -434,6 +460,7 @@
        "      <td>-74.007130</td>\n",
        "      <td>$$$$</td>\n",
        "      <td>2989</td>\n",
+       "      <td>4.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
@@ -444,7 +471,8 @@
        "      <td>40.769828</td>\n",
        "      <td>-73.957633</td>\n",
        "      <td>$$</td>\n",
-       "      <td>2119</td>\n",
+       "      <td>2120</td>\n",
+       "      <td>4.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
@@ -456,6 +484,7 @@
        "      <td>-73.982763</td>\n",
        "      <td>$$$$</td>\n",
        "      <td>1600</td>\n",
+       "      <td>4.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
@@ -467,6 +496,7 @@
        "      <td>-73.994171</td>\n",
        "      <td>$$</td>\n",
        "      <td>3121</td>\n",
+       "      <td>4.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
@@ -478,6 +508,7 @@
        "      <td>-73.986540</td>\n",
        "      <td>$$</td>\n",
        "      <td>4364</td>\n",
+       "      <td>4.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -491,15 +522,15 @@
        "3                              Cafe Habana  New York    NY     Cuban   \n",
        "4  Junior's Restaurant & Bakery - 45th St.  New York    NY  Bakeries   \n",
        "\n",
-       "    Latitude  Longitude Price  Reviews  \n",
-       "0  40.743320 -74.007130  $$$$     2989  \n",
-       "1  40.769828 -73.957633    $$     2119  \n",
-       "2  40.768153 -73.982763  $$$$     1600  \n",
-       "3  40.722998 -73.994171    $$     3121  \n",
-       "4  40.758266 -73.986540    $$     4364  "
+       "    Latitude  Longitude Price  Reviews  Rating  \n",
+       "0  40.743320 -74.007130  $$$$     2989     4.0  \n",
+       "1  40.769828 -73.957633    $$     2120     4.5  \n",
+       "2  40.768153 -73.982763  $$$$     1600     4.5  \n",
+       "3  40.722998 -73.994171    $$     3121     4.0  \n",
+       "4  40.758266 -73.986540    $$     4364     4.0  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,17 +541,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'Price'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\indexes\\base.py\u001b[0m in \u001b[0;36mget_loc\u001b[1;34m(self, key, method, tolerance)\u001b[0m\n\u001b[0;32m   2896\u001b[0m             \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2897\u001b[1;33m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2898\u001b[0m             \u001b[1;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mpandas\\_libs\\index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mpandas\\_libs\\index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'Price'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-59-6fbdb2586366>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;31m#price by category\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[0meast_category_price\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0meast_category\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Price'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalue_counts\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;31m#average value of review for category\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   2978\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnlevels\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2979\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_getitem_multilevel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2980\u001b[1;33m             \u001b[0mindexer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2981\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mis_integer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2982\u001b[0m                 \u001b[0mindexer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mindexer\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\indexes\\base.py\u001b[0m in \u001b[0;36mget_loc\u001b[1;34m(self, key, method, tolerance)\u001b[0m\n\u001b[0;32m   2897\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2898\u001b[0m             \u001b[1;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2899\u001b[1;33m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_maybe_cast_indexer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2900\u001b[0m         \u001b[0mindexer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_indexer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmethod\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mmethod\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtolerance\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtolerance\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2901\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mindexer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mndim\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m1\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0mindexer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msize\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mpandas\\_libs\\index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mpandas\\_libs\\index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'Price'"
+     ]
+    }
+   ],
    "source": [
     "#breakdown by categories, counts in each category\n",
     "east_category = east_data.loc[:,[\"Category\"]]\n",
     "# north_data_category.count()\n",
-    "east_category = east_category[\"Category\"].value_counts()\n",
+    "east_category_counts = east_category[\"Category\"].value_counts()\n",
     "#total reviews breakdown by category\n",
+    "\n",
+    "#price by category\n",
+    "east_category_price = east_category['Price'].value_counts()\n",
+    "\n",
     "#average value of review for category\n",
-    "#"
+    "\n",
+    "east_category_counts\n"
    ]
   },
   {
