--- a/TestingNewYork.ipynb
+++ b/TestingNewYork.ipynb
@@ -2276,7 +2276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -2300,9 +2300,9 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Number of Reviews</th>\n",
-       "      <th>Avg Reviews</th>\n",
-       "      <th>Percentage of Sample</th>\n",
+       "      <th>Number of Restaurants</th>\n",
+       "      <th>Average # of Reviews per Restaurant</th>\n",
+       "      <th>Percentage of Ratings</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Category</th>\n",
@@ -2455,53 +2455,123 @@
        "</div>"
       ],
       "text/plain": [
-       "                        Number of Reviews  Avg Reviews  Percentage of Sample\n",
-       "Category                                                                    \n",
-       "American (New)                          2      1515.50              3.750000\n",
-       "American (Traditional)                  2       429.50              4.000000\n",
-       "Brazilian                               1      1298.00              4.000000\n",
-       "Cajun/Creole                            2      1072.50              4.500000\n",
-       "Chinese                                 3       475.00              4.333333\n",
-       "Comfort Food                            1      3891.00              4.000000\n",
-       "Filipino                                1      1546.00              4.000000\n",
-       "French                                  3      1349.00              4.500000\n",
-       "Gastropubs                              1       367.00              4.500000\n",
-       "Georgian                                1       148.00              4.500000\n",
-       "Italian                                 8      1674.50              4.125000\n",
-       "Japanese                                4       755.75              4.250000\n",
-       "Korean                                  4       989.00              4.750000\n",
-       "Mediterranean                           1       413.00              4.000000\n",
-       "Mexican                                 1       795.00              4.500000\n",
-       "Pizza                                   2      2013.50              4.250000\n",
-       "Ramen                                   2      5380.00              4.250000\n",
-       "Seafood                                 3      2531.00              4.333333\n",
-       "Shanghainese                            1      5939.00              4.000000\n",
-       "Tapas Bars                              1      1847.00              4.000000\n",
-       "Tapas/Small Plates                      1       508.00              4.500000\n",
-       "Thai                                    4      2572.75              4.500000\n",
-       "Tuscan                                  1       723.00              4.000000"
+       "                        Number of Restaurants  \\\n",
+       "Category                                        \n",
+       "American (New)                              2   \n",
+       "American (Traditional)                      2   \n",
+       "Brazilian                                   1   \n",
+       "Cajun/Creole                                2   \n",
+       "Chinese                                     3   \n",
+       "Comfort Food                                1   \n",
+       "Filipino                                    1   \n",
+       "French                                      3   \n",
+       "Gastropubs                                  1   \n",
+       "Georgian                                    1   \n",
+       "Italian                                     8   \n",
+       "Japanese                                    4   \n",
+       "Korean                                      4   \n",
+       "Mediterranean                               1   \n",
+       "Mexican                                     1   \n",
+       "Pizza                                       2   \n",
+       "Ramen                                       2   \n",
+       "Seafood                                     3   \n",
+       "Shanghainese                                1   \n",
+       "Tapas Bars                                  1   \n",
+       "Tapas/Small Plates                          1   \n",
+       "Thai                                        4   \n",
+       "Tuscan                                      1   \n",
+       "\n",
+       "                        Average # of Reviews per Restaurant  \\\n",
+       "Category                                                      \n",
+       "American (New)                                      1515.50   \n",
+       "American (Traditional)                               429.50   \n",
+       "Brazilian                                           1298.00   \n",
+       "Cajun/Creole                                        1072.50   \n",
+       "Chinese                                              475.00   \n",
+       "Comfort Food                                        3891.00   \n",
+       "Filipino                                            1546.00   \n",
+       "French                                              1349.00   \n",
+       "Gastropubs                                           367.00   \n",
+       "Georgian                                             148.00   \n",
+       "Italian                                             1674.50   \n",
+       "Japanese                                             755.75   \n",
+       "Korean                                               989.00   \n",
+       "Mediterranean                                        413.00   \n",
+       "Mexican                                              795.00   \n",
+       "Pizza                                               2013.50   \n",
+       "Ramen                                               5380.00   \n",
+       "Seafood                                             2531.00   \n",
+       "Shanghainese                                        5939.00   \n",
+       "Tapas Bars                                          1847.00   \n",
+       "Tapas/Small Plates                                   508.00   \n",
+       "Thai                                                2572.75   \n",
+       "Tuscan                                               723.00   \n",
+       "\n",
+       "                        Percentage of Ratings  \n",
+       "Category                                       \n",
+       "American (New)                       3.750000  \n",
+       "American (Traditional)               4.000000  \n",
+       "Brazilian                            4.000000  \n",
+       "Cajun/Creole                         4.500000  \n",
+       "Chinese                              4.333333  \n",
+       "Comfort Food                         4.000000  \n",
+       "Filipino                             4.000000  \n",
+       "French                               4.500000  \n",
+       "Gastropubs                           4.500000  \n",
+       "Georgian                             4.500000  \n",
+       "Italian                              4.125000  \n",
+       "Japanese                             4.250000  \n",
+       "Korean                               4.750000  \n",
+       "Mediterranean                        4.000000  \n",
+       "Mexican                              4.500000  \n",
+       "Pizza                                4.250000  \n",
+       "Ramen                                4.250000  \n",
+       "Seafood                              4.333333  \n",
+       "Shanghainese                         4.000000  \n",
+       "Tapas Bars                           4.000000  \n",
+       "Tapas/Small Plates                   4.500000  \n",
+       "Thai                                 4.500000  \n",
+       "Tuscan                               4.000000  "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "new_df= pd.DataFrame({\n",
-    "    \"Number of Reviews\": total_category,\n",
-    "    \"Avg Reviews\": review_counts,\n",
-    "    \"Percentage of Sample\": rating_counts\n",
+    "    \"Number of Restaurants\": total_category,\n",
+    "    \"Average # of Reviews per Restaurant\": review_counts,\n",
+    "    \"Percentage of Ratings\": rating_counts\n",
     "})\n",
     "new_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'category'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-65-2f5933865edb>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mfinal_df\u001b[0m \u001b[1;33m=\u001b[0m\u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmerge\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnewyork_df\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnew_df\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mon\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'category'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mhow\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'outer'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\reshape\\merge.py\u001b[0m in \u001b[0;36mmerge\u001b[1;34m(left, right, how, on, left_on, right_on, left_index, right_index, sort, suffixes, copy, indicator, validate)\u001b[0m\n\u001b[0;32m     79\u001b[0m         \u001b[0mcopy\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcopy\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     80\u001b[0m         \u001b[0mindicator\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mindicator\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 81\u001b[1;33m         \u001b[0mvalidate\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mvalidate\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     82\u001b[0m     )\n\u001b[0;32m     83\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mop\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_result\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\reshape\\merge.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, left, right, how, on, left_on, right_on, axis, left_index, right_index, sort, suffixes, copy, indicator, validate)\u001b[0m\n\u001b[0;32m    624\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mright_join_keys\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    625\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin_names\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 626\u001b[1;33m         ) = self._get_merge_keys()\n\u001b[0m\u001b[0;32m    627\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    628\u001b[0m         \u001b[1;31m# validate the merge keys dtypes. We may need to coerce\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\reshape\\merge.py\u001b[0m in \u001b[0;36m_get_merge_keys\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    973\u001b[0m                     \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mis_rkey\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrk\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    974\u001b[0m                         \u001b[1;32mif\u001b[0m \u001b[0mrk\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 975\u001b[1;33m                             \u001b[0mright_keys\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mright\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_get_label_or_level_values\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrk\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    976\u001b[0m                         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    977\u001b[0m                             \u001b[1;31m# work-around for merge_asof(right_index=True)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m_get_label_or_level_values\u001b[1;34m(self, key, axis)\u001b[0m\n\u001b[0;32m   1772\u001b[0m             \u001b[0mvalues\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0maxes\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0maxis\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_level_values\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_values\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1773\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1774\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1775\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1776\u001b[0m         \u001b[1;31m# Check for duplicates\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'category'"
+     ]
+    }
+   ],
+   "source": [
+    "final_df =pd.merge(newyork_df, new_df, on='category', how='outer')"
+   ]
   },
   {
    "cell_type": "code",
