--- a/YelpSearchQuery.ipynb
+++ b/YelpSearchQuery.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
     "        'Authorization': 'Bearer {}'.format(api_key),}\n",
     "    url_params = { #parameters passed to the API\n",
     "    \"categories\": 'restaurant',\n",
-    "    \"location\":'New York City, NY',\n",
+    "    \"location\":'Chicago, IL',\n",
     "    'offset': offset_num,\n",
     "     \"limit\":50\n",
     "     }\n",
@@ -77,11 +77,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for offset_num in range(1): \n",
+    "for offset_num in range(118): \n",
     "    try:\n",
     "        response = query_search(offset_num)\n",
     "        businesses=response['businesses']            \n",
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -168,183 +168,183 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>Levain Bakery</td>\n",
-       "      <td>H4jJ7XB3CetIr1pg56CczQ</td>\n",
-       "      <td>New York</td>\n",
-       "      <td>NY</td>\n",
-       "      <td>Bakeries</td>\n",
-       "      <td>40.779940</td>\n",
-       "      <td>-73.980283</td>\n",
-       "      <td>$$</td>\n",
-       "      <td>7769</td>\n",
+       "      <td>Girl &amp; the Goat</td>\n",
+       "      <td>qjnpkS8yZO8xcyEIy5OU9A</td>\n",
+       "      <td>Chicago</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>American (New)</td>\n",
+       "      <td>41.884176</td>\n",
+       "      <td>-87.647944</td>\n",
+       "      <td>$$$</td>\n",
+       "      <td>8406</td>\n",
        "      <td>4.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>The Halal Guys</td>\n",
-       "      <td>xEnNFXtMLDF5kZDxfaCJgA</td>\n",
-       "      <td>New York</td>\n",
-       "      <td>NY</td>\n",
-       "      <td>Food Stands</td>\n",
-       "      <td>40.761756</td>\n",
-       "      <td>-73.979230</td>\n",
-       "      <td>$</td>\n",
-       "      <td>9252</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>Wildberry Pancakes and Cafe</td>\n",
+       "      <td>cKZNbMvoqJaUe7n6lf6i7w</td>\n",
+       "      <td>Chicago</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>Pancakes</td>\n",
+       "      <td>41.884668</td>\n",
+       "      <td>-87.622880</td>\n",
+       "      <td>$$</td>\n",
+       "      <td>6924</td>\n",
+       "      <td>4.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>Katz's Delicatessen</td>\n",
-       "      <td>V7lXZKBDzScDeGB8JmnzSA</td>\n",
-       "      <td>New York</td>\n",
-       "      <td>NY</td>\n",
-       "      <td>Delis</td>\n",
-       "      <td>40.722237</td>\n",
-       "      <td>-73.987430</td>\n",
+       "      <td>Au Cheval</td>\n",
+       "      <td>xoi7Cw7FoknAx5p880RtWQ</td>\n",
+       "      <td>Chicago</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>Bars</td>\n",
+       "      <td>41.884660</td>\n",
+       "      <td>-87.647668</td>\n",
        "      <td>$$</td>\n",
-       "      <td>11697</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>6750</td>\n",
+       "      <td>4.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>Ippudo NY</td>\n",
-       "      <td>44SY464xDHbvOcjDzRbKkQ</td>\n",
-       "      <td>New York</td>\n",
-       "      <td>NY</td>\n",
-       "      <td>Ramen</td>\n",
-       "      <td>40.730920</td>\n",
-       "      <td>-73.990150</td>\n",
+       "      <td>The Purple Pig</td>\n",
+       "      <td>boE4Ahsssqic7o5wQLI04w</td>\n",
+       "      <td>Chicago</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>Tapas/Small Plates</td>\n",
+       "      <td>41.890694</td>\n",
+       "      <td>-87.624782</td>\n",
        "      <td>$$</td>\n",
-       "      <td>9845</td>\n",
+       "      <td>6942</td>\n",
        "      <td>4.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>The Metropolitan Museum of Art</td>\n",
-       "      <td>jVncyqXwlx_D9f2xZn05tg</td>\n",
-       "      <td>New York</td>\n",
-       "      <td>NY</td>\n",
-       "      <td>Art Museums</td>\n",
-       "      <td>40.779254</td>\n",
-       "      <td>-73.962884</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2762</td>\n",
-       "      <td>4.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>295</td>\n",
-       "      <td>ABC Kitchen</td>\n",
-       "      <td>dMhRafXdr765DHe0k-QfaQ</td>\n",
-       "      <td>New York</td>\n",
-       "      <td>NY</td>\n",
-       "      <td>American (New)</td>\n",
-       "      <td>40.738085</td>\n",
-       "      <td>-73.989472</td>\n",
-       "      <td>$$$</td>\n",
-       "      <td>2919</td>\n",
+       "      <td>Lou Malnati's Pizzeria</td>\n",
+       "      <td>8vFJH_paXsMocmEO_KAa3w</td>\n",
+       "      <td>Chicago</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>Pizza</td>\n",
+       "      <td>41.890357</td>\n",
+       "      <td>-87.633704</td>\n",
+       "      <td>$$</td>\n",
+       "      <td>5869</td>\n",
        "      <td>4.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>296</td>\n",
-       "      <td>Rice To Riches</td>\n",
-       "      <td>HxC2ZN010NxAFwjTqUVpzw</td>\n",
-       "      <td>New York</td>\n",
-       "      <td>NY</td>\n",
-       "      <td>Desserts</td>\n",
-       "      <td>40.721845</td>\n",
-       "      <td>-73.995802</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5895</td>\n",
+       "      <td>Spinning J Bakery and Soda Fountain</td>\n",
+       "      <td>gxUFFsSLa-IyouuRD2Ma6w</td>\n",
+       "      <td>Chicago</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>Coffee &amp; Tea</td>\n",
+       "      <td>41.899450</td>\n",
+       "      <td>-87.697160</td>\n",
        "      <td>$$</td>\n",
-       "      <td>2971</td>\n",
+       "      <td>336</td>\n",
+       "      <td>4.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5896</td>\n",
+       "      <td>Zizi's Cafe</td>\n",
+       "      <td>wzw3aysUi9sBq-wLb6OXbQ</td>\n",
+       "      <td>Chicago</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>Mediterranean</td>\n",
+       "      <td>41.933315</td>\n",
+       "      <td>-87.653724</td>\n",
+       "      <td>$$</td>\n",
+       "      <td>569</td>\n",
+       "      <td>4.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5897</td>\n",
+       "      <td>El Habanero</td>\n",
+       "      <td>-NLBAIP5O8BYqbPg0toNog</td>\n",
+       "      <td>Chicago</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>Mexican</td>\n",
+       "      <td>41.924960</td>\n",
+       "      <td>-87.710990</td>\n",
+       "      <td>$</td>\n",
+       "      <td>442</td>\n",
+       "      <td>4.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5898</td>\n",
+       "      <td>Farmhouse Chicago</td>\n",
+       "      <td>6WE3zP14Azd0xM6Hk7C8Pw</td>\n",
+       "      <td>Chicago</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>Bars</td>\n",
+       "      <td>41.896860</td>\n",
+       "      <td>-87.635400</td>\n",
+       "      <td>$$</td>\n",
+       "      <td>1290</td>\n",
        "      <td>4.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>297</td>\n",
-       "      <td>Traif</td>\n",
-       "      <td>qLLxS7RwNEjP_jq_KQrPfA</td>\n",
-       "      <td>Brooklyn</td>\n",
-       "      <td>NY</td>\n",
-       "      <td>American (New)</td>\n",
-       "      <td>40.710658</td>\n",
-       "      <td>-73.958872</td>\n",
-       "      <td>$$$</td>\n",
-       "      <td>1830</td>\n",
-       "      <td>4.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>298</td>\n",
-       "      <td>Molly's Cupcakes</td>\n",
-       "      <td>Hs1TH_4FpyzbX6_J5r1XXg</td>\n",
-       "      <td>New York</td>\n",
-       "      <td>NY</td>\n",
-       "      <td>Bakeries</td>\n",
-       "      <td>40.730140</td>\n",
-       "      <td>-74.002480</td>\n",
-       "      <td>$$</td>\n",
-       "      <td>1623</td>\n",
-       "      <td>4.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>299</td>\n",
-       "      <td>Angel's Share</td>\n",
-       "      <td>ZD22cMZvSmfNsXS9vKizGA</td>\n",
-       "      <td>New York</td>\n",
-       "      <td>NY</td>\n",
-       "      <td>Cocktail Bars</td>\n",
-       "      <td>40.729710</td>\n",
-       "      <td>-73.989149</td>\n",
-       "      <td>$$</td>\n",
-       "      <td>2061</td>\n",
+       "      <td>5899</td>\n",
+       "      <td>Steak 48</td>\n",
+       "      <td>f1neY8Zd9xld7BB7G7mC0Q</td>\n",
+       "      <td>Chicago</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>Steakhouses</td>\n",
+       "      <td>41.893000</td>\n",
+       "      <td>-87.626370</td>\n",
+       "      <td>$$$$</td>\n",
+       "      <td>568</td>\n",
        "      <td>4.5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>300 rows × 10 columns</p>\n",
+       "<p>5900 rows × 10 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                           Business             Business ID      City State  \\\n",
-       "0                     Levain Bakery  H4jJ7XB3CetIr1pg56CczQ  New York    NY   \n",
-       "1                    The Halal Guys  xEnNFXtMLDF5kZDxfaCJgA  New York    NY   \n",
-       "2               Katz's Delicatessen  V7lXZKBDzScDeGB8JmnzSA  New York    NY   \n",
-       "3                         Ippudo NY  44SY464xDHbvOcjDzRbKkQ  New York    NY   \n",
-       "4    The Metropolitan Museum of Art  jVncyqXwlx_D9f2xZn05tg  New York    NY   \n",
-       "..                              ...                     ...       ...   ...   \n",
-       "295                     ABC Kitchen  dMhRafXdr765DHe0k-QfaQ  New York    NY   \n",
-       "296                  Rice To Riches  HxC2ZN010NxAFwjTqUVpzw  New York    NY   \n",
-       "297                           Traif  qLLxS7RwNEjP_jq_KQrPfA  Brooklyn    NY   \n",
-       "298                Molly's Cupcakes  Hs1TH_4FpyzbX6_J5r1XXg  New York    NY   \n",
-       "299                   Angel's Share  ZD22cMZvSmfNsXS9vKizGA  New York    NY   \n",
+       "                                 Business             Business ID     City  \\\n",
+       "0                         Girl & the Goat  qjnpkS8yZO8xcyEIy5OU9A  Chicago   \n",
+       "1             Wildberry Pancakes and Cafe  cKZNbMvoqJaUe7n6lf6i7w  Chicago   \n",
+       "2                               Au Cheval  xoi7Cw7FoknAx5p880RtWQ  Chicago   \n",
+       "3                          The Purple Pig  boE4Ahsssqic7o5wQLI04w  Chicago   \n",
+       "4                  Lou Malnati's Pizzeria  8vFJH_paXsMocmEO_KAa3w  Chicago   \n",
+       "...                                   ...                     ...      ...   \n",
+       "5895  Spinning J Bakery and Soda Fountain  gxUFFsSLa-IyouuRD2Ma6w  Chicago   \n",
+       "5896                          Zizi's Cafe  wzw3aysUi9sBq-wLb6OXbQ  Chicago   \n",
+       "5897                          El Habanero  -NLBAIP5O8BYqbPg0toNog  Chicago   \n",
+       "5898                    Farmhouse Chicago  6WE3zP14Azd0xM6Hk7C8Pw  Chicago   \n",
+       "5899                             Steak 48  f1neY8Zd9xld7BB7G7mC0Q  Chicago   \n",
        "\n",
-       "           Category   Latitude  Longitude Price  Reviews  Rating  \n",
-       "0          Bakeries  40.779940 -73.980283    $$     7769     4.5  \n",
-       "1       Food Stands  40.761756 -73.979230     $     9252     4.0  \n",
-       "2             Delis  40.722237 -73.987430    $$    11697     4.0  \n",
-       "3             Ramen  40.730920 -73.990150    $$     9845     4.0  \n",
-       "4       Art Museums  40.779254 -73.962884     0     2762     4.5  \n",
-       "..              ...        ...        ...   ...      ...     ...  \n",
-       "295  American (New)  40.738085 -73.989472   $$$     2919     4.0  \n",
-       "296        Desserts  40.721845 -73.995802    $$     2971     4.0  \n",
-       "297  American (New)  40.710658 -73.958872   $$$     1830     4.5  \n",
-       "298        Bakeries  40.730140 -74.002480    $$     1623     4.5  \n",
-       "299   Cocktail Bars  40.729710 -73.989149    $$     2061     4.5  \n",
+       "     State            Category   Latitude  Longitude Price  Reviews  Rating  \n",
+       "0       IL      American (New)  41.884176 -87.647944   $$$     8406     4.5  \n",
+       "1       IL            Pancakes  41.884668 -87.622880    $$     6924     4.5  \n",
+       "2       IL                Bars  41.884660 -87.647668    $$     6750     4.5  \n",
+       "3       IL  Tapas/Small Plates  41.890694 -87.624782    $$     6942     4.0  \n",
+       "4       IL               Pizza  41.890357 -87.633704    $$     5869     4.0  \n",
+       "...    ...                 ...        ...        ...   ...      ...     ...  \n",
+       "5895    IL        Coffee & Tea  41.899450 -87.697160    $$      336     4.5  \n",
+       "5896    IL       Mediterranean  41.933315 -87.653724    $$      569     4.5  \n",
+       "5897    IL             Mexican  41.924960 -87.710990     $      442     4.5  \n",
+       "5898    IL                Bars  41.896860 -87.635400    $$     1290     4.0  \n",
+       "5899    IL         Steakhouses  41.893000 -87.626370  $$$$      568     4.5  \n",
        "\n",
-       "[300 rows x 10 columns]"
+       "[5900 rows x 10 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,11 +355,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# business_df.to_csv('data/SanFrancisco.csv')"
+    "# business_df.to_csv('data/Chicago.csv')"
    ]
   },
   {
