--- a/ProjectMaster.ipynb
+++ b/ProjectMaster.ipynb
@@ -617,7 +617,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#come up with distribution of plots.  Take the sample and scatter plot the samples with star ratings to number of ratings\n",
+    "#scatter plot for sample of distribution, normal test? regression? try and distinguish correleations."
+   ]
   }
  ],
  "metadata": {
