--- a/MainSearchQuery.ipynb
+++ b/MainSearchQuery.ipynb
@@ -328,11 +328,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "business_df.to_csv('data/AustinTX.csv')"
+    "business_df.to_csv('data/Chicago.csv')"
    ]
   },
   {
